--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: start;
-  align-items: center;
+  justify-content: flex-start;
   padding: 6rem;
   min-height: 100vh;
 }
